Major refactor and enhancement to the WFS import mechanism and an initial implementation of an export mechanism.
- Create org.jdesktop.wonderland.common.wfs package to hold JAXB-annotated classes with
  information passed to/from WFS web service.
- Added two RESTful resources to the WFS web service: one to create a new "snapshot" and
  another to add WFS cells to this snapshot.
- Added ability to export the state of the world as WFS to a "snapshot".
- Added getCellSetup() method to BeanSetupMO to return the state of a cell as a setup object.